# frankensteinDb

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: container.yml
docs/: API.md  openapi.json
docs/wiki/: Aggregations-and-analysis.md  Complete-feature-and-limit-reference.md  Core-concepts-and-guarantees.md  Docker-and-deployment.md  Embedding-in-Rust.md  HTTP-API-reference.md  Home.md  Operations-security-and-monitoring.md  Quick-start.md  Schema-and-data-types.md  Search-and-queries.md  Writes-imports-and-concurrency.md  _Sidebar.md
scripts/: benchmark-ramdisk.sh
src/: aggregation_api.rs  aggregation_model.rs  canonical.rs  database_admin.rs  database_api.rs  database_backup.rs  database_index.rs  database_mutation.rs  database_read.rs  database_schema.rs  document_store.rs  filter.rs  geo.rs  global_allocator.rs  lib.rs  main.rs  model.rs  mutation.rs  query.rs  search_diagnostics.rs  search_runtime.rs  search_service.rs  segment_ranges.rs  similar.rs  sql_schema.rs  synonym_filter.rs  tantivy_array.rs  tantivy_schema.rs  tests.rs
src/aggregation_api/: compiler.rs  executor.rs  filter.rs  values.rs
src/database_admin/: optimize.rs
src/geo/: aggregation.rs  encoding.rs  query.rs
src/mutation/: execute.rs  json_values.rs  values.rs
src/query/: advanced_text.rs  aggregation.rs  block_top_k.rs  compiler.rs  cursor.rs  doc_order.rs  filter_score.rs  highlight.rs  json_path.rs  materialized_top_k.rs  projection.rs  scored_top_k.rs  scoring.rs  typed_aggregation.rs  typed_compiler.rs  typed_projection.rs  typed_values.rs
src/query/scored_top_k/: segment.rs
src/tests/: advanced_tests.rs  facet_tests.rs  geo_boundary_tests.rs  geo_support.rs  geo_tests.rs  json_aggregation_tests.rs  mutation_tests.rs  performance_tests.rs  query_tests.rs  recovery_tests.rs  schema_search_tests.rs  search_query_tests.rs  support.rs  tantivy_feature_tests.rs
